# implementations

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: quick.ipynb
src/masala/ml/trees/: codesignal_tree.py  decision_tree.py  deepml_tree.py  metrics.py
src/rooibos/dl/transformer/: bpe_tokenizer.py  components.py  models.py
src/rooibos/ml/: __init__.py
src/rooibos/ml/clustering/: k_means.py
src/rooibos/ml/ensemble/: bagging.py  random_forest.py
src/rooibos/ml/linear_regression/: README.md  __init__.py  linear_regression_gd.py
src/rooibos/ml/logistic_regression/: Readme.md  logistic_regression_gd.py
src/rooibos/ml/nearest_neighbours/: __init__.py  knn.py
src/rooibos/ml/tree/: __init__.py  decision_tree.py  metrics.py
src/rooibos/ml/tree/other/: codesignal_tree.py  decision_tree.py  decision_tree_implementations.md  deepml_tree.py
tests/dl/transformer/: test_model.py
tests/ml/clustering/: test_k_means.py
tests/ml/ensemble/: test_bagging.py
tests/ml/linear_regression/: test_linear_regression_gd.py
tests/ml/logistic_regression/: test_logistic_regression_gd.py
tests/ml/nearest_neighbours/: test_knn.py
tests/ml/tree/: test_decision_tree.py
tests/ml/trees/: test_decision_tree.py
