[project]
name = "rooibos"
version = "0.1.0"
description = "Implementation of ml, dl, math algorithms with tests. Additional notebooks for deeper understanding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pytest>=8.3.5",
]
